--- a/ventas.html
+++ b/ventas.html
@@ -7,6 +7,11 @@
     <title>Historial de Ventas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <script>
+      function verDetalle() {
+        window.location.href = "boleta.html";
+      }
+    </script>
 </head>
 <body>
     <!-- Cabecera con menú administrador -->
@@ -15,7 +20,67 @@
     <!-- Contenido de la pagina -->
     <h1 style="margin: 25px;">Historial de Ventas</h1>
 
-        FALTAAAAAAAAAAAAAAAA
+    <Section>
+      <div class="container pt-2" >
+        <section class="text-center" >
+          <br><br>
+          <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
+            <thead > <!--cabeceras de la tabla-->
+              <!--Titulos de la parte de arriba de la tabla -->
+              <th scope="col" style="background-color:#a7aad2;">Nro boleta</th>
+              <th scope="col" style="background-color:#a7aad2;">Fecha</th> 
+              <th scope="col" style="background-color:#a7aad2;">Nombre cliente</th>
+              <th scope="col" style="background-color:#a7aad2;">Subscrito</th>
+              <th scope="col" style="background-color:#a7aad2;">Monto total</th>
+              <th scope="col" style="background-color:#a7aad2;">Estado actual</th>
+              <th scope="col" style="background-color:#a7aad2;">Detalle</th>
+              <th scope="col" style="background-color:#a7aad2;">Cambiar estado</th>
+              
+            </thead>
+            <tbody>
+              <tr> <!--tr:filas  td:columnas-->
+                  <td scope="row" style="background-color:#a7aad2;">324</td>
+                  <td scope="row" style="background-color:#a7aad2;">1/08/2024 </td>
+                  <td scope="col" style="background-color:#a7aad2;">Javier Hernández</td>
+                  <td scope="col" style="background-color:#a7aad2;">Sí</td>
+                  <td scope="col" style="background-color:#a7aad2;">$15.000</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Vendido</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#a7aad2;"><span>Anulado, Vendido, Despachado, Entregado</span></td>
+
+              </tr>
+              <tr> <!--tr:filas  td:columnas-->
+                  <td scope="row" style="background-color:#a7aad2;">233</td>
+                  <td scope="row" style="background-color:#a7aad2;">04/05/2023 </td>
+                  <td scope="col" style="background-color:#a7aad2;">Ana García</td>
+                  <td scope="col" style="background-color:#a7aad2;">No</td>
+                  <td scope="col" style="background-color:#a7aad2;">$10.000</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">En Bodega</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+              </tr>
+              <tr> <!--tr:filas  td:columnas-->
+                <td scope="row" style="background-color:#a7aad2;">152</td>
+                <td scope="row" style="background-color:#a7aad2;">24/01/2024 </td>
+                <td scope="col" style="background-color:#a7aad2;">Ricardo Flores</td>
+                <td scope="col" style="background-color:#a7aad2;">Sí</td>
+                <td scope="col" style="background-color:#a7aad2;">$7.000</td>
+                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Entregado</td>
+                <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+              </tr>
+              <tr> <!--tr:filas  td:columnas-->
+                  <td scope="row" style="background-color:#a7aad2;">255</td>
+                  <td scope="row" style="background-color:#a7aad2;">17/12/2023</td>
+                  <td scope="col" style="background-color:#a7aad2;">María López</td>
+                  <td scope="col" style="background-color:#a7aad2;" >Sí</td>
+                  <td scope="col" style="background-color:#a7aad2;">$38.000</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Anulado</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                </tr>
+            </tbody>
+          </table>
+        </section>
+      </div>
+  </Section>
 
 
 
