--- a/carrito.html
+++ b/carrito.html
@@ -20,8 +20,11 @@
           <br >
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
+
+
+              
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#a7aad2;">ID</th>
+              <th scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">ID</th>
               <th scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell" >Categoría</th> <!--Desde un tamaño lg hacia arriba mostrara la categoria si esta un lg hacia abajo la oculta-->
               <th scope="col" style="background-color:#a7aad2;">Producto</th>
               <th scope="col" style="background-color:#a7aad2;" class="text-end">Precio</th>
@@ -34,7 +37,7 @@
             </thead>
             <tbody>
               <tr> <!--tr:filas  td:columnas-->
-                <td scope="row" style="background-color:#a7aad2;">AEFS1243 </td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cel">AEFS1243 </td>
                 <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                 <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
                 <td scope="col" style="background-color:#a7aad2;" class="text-end">$10.000</td>
@@ -43,51 +46,48 @@
                 <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">15%</td>
                 <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">$4.500</td>
                 <td scope="col" style="background-color:#a7aad2;" class="text-end">$5.500</td>
-                <td scope="col" style="background-color:#a7aad2;">
-                  <button type="delete" href="#" class="btn btn-primary btn-sm boton_buscar_anonimo_2">Eliminar</button>
-                </td>
+                <td scope="col" style="background-color:#a7aad2; text-align: center;">
+                  <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Eliminar</button>
+              </td>
               </tr>
-              <tfoot> <!--tfoot para hacer los calculos de las compras-->
+              <tfoot>  <!--tfoot para hacer los calculos de las compras-->
                 <tr>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" ></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">Precio sin IVA</td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">$50.000.000</td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cel"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">Precio sin IVA</td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">$50.000.000</td>
                 </tr>
                 <tr>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">Valor del IVA (19%)</td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">$2.547</td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cel"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">Valor del IVA (19%)</td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">$2.547</td>
                 </tr>
-                <tr >
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2"class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">Total a pagar</td>
-                  <td scope="col" style="background-color:#a7aad2" class="text-end">$2.547.000</td>
-                  <td scope="col" style="background-color:#a7aad2"></td>
+                <tr>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cel"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end d-none d-lg-block d-lg-table-cell"></td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">Total a pagar</td>
+                    <td scope="col" style="background-color:#a7aad2" class="text-end">$2.547.000</td>
                 </tr>
-              </tfoot>
+            </tfoot>
             </tbody>
           </table>
         </section>
@@ -107,6 +107,15 @@
     <!-- Tabla --> 
 
     <br><br><br><br><br><br><br><br><br><br><br><br>
+
+
+
+
+
+
+
+
+
     <!-- Footer de la tienda -->
     <footer id="footer" >
       <div class="container text-center" >
