--- a/nosotros.html
+++ b/nosotros.html
@@ -20,8 +20,8 @@
 
   <!-- Contenido principal de la pagina -->
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-sm-12 col-md-5 col-lg-4 col-xl-2" style=" background-color:#7579a4;">
+    <div class="row text-center justify-content-center align-items-center">
+      <div class="col-sm-12 col-md-5 col-lg-4 col-xl-2 " style=" background-color:#7579a4;">
         <img height="300px" src="img/logo1.png" alt="">
         <p class="letra_blanca">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -32,7 +32,7 @@
       </div>
 
       <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: rem;">
           <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: rem;">
           <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">
@@ -70,7 +70,7 @@
      
 
       <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: 18rem;">
+        <div class="card" style="width: rem;">
           <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">
@@ -92,6 +92,10 @@
     </div>
 
     <br><br><br><br><br><br>
+
+
+
+
     <!-- Footer de la tienda -->
     <footer id="footer">
       <div class="container text-center">
