--- a/productos.html
+++ b/productos.html
@@ -15,7 +15,7 @@
     <!-- Contenido de la pagina -->
     <!--Producto-->
     <Section>
-        <div class="container" style="margin-right: 10px;">
+        <div class="container" style="margin-right: px;">
           <section>
             <h1 style="margin: 25px;">Mantenedor de productos</h1>
             <br>
