--- a/usuarios.html
+++ b/usuarios.html
@@ -86,14 +86,13 @@
 
           <!-- Dirección -->
 
-          <div class="fmb-3 fw-bold">
+          <div class="form-group mb-3">
             <label for="direccion" class="form-label letra_blanca">Dirección</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"> 
-            </textarea>
-            <div class="invalid-feedback">Debe llenar el campo Dirección</div>
+            <textarea class="form-control" id="direccion" name="direccion" rows="3" placeholder="Ejemplo: Calle Principal, Ciudad, País" required></textarea>
+            <div id="alerta-direccion" class="invalid-feedback">Debe llenar el campo Correo.</div>
         </div> 
 
-        <br>
+        <br><br>
 
          <!-- Check -->
 
@@ -112,21 +111,19 @@
           <label for="contraseña" class="form-label letra_blanca">Contraseña</label>
           <div class="d-flex align-items-center">
             <input type="text" class="form-control" id="contraseña" placeholder="123" required>
-            <button type="button" class="btn btn-primary ms-2">Generar  Contraseña</button>
+            <button type="button" class="btn btn-primary ms-2" style="background-color:#7073a3;">Generar  Contraseña</button>
           </div>
           <div class="invalid-feedback">Debe llenar el campo contraseña</div>
         </div>
 
+
         <!-- Botones -->
         <br>
-        <div class="mb-3 fw-bold d-flex">
-          <!-- Botón "Guardar" -->
-          <button type="button" class="btn btn-primary me-2">Guardar</button>
-          <!-- Botón "Eliminar" -->
-          <button type="button" class="btn btn-danger me-2">Eliminar</button>
-          <!-- Botón "Nuevo" -->
-          <button type="button" class="btn btn-success">Nuevo</button>
-        </div>
+        <div class="btn-group">
+          <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
+          <button type="update" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Agregar</button>
+          <button type="reset" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Eliminar</button>
+      </div>
           </div>
                 <br><br>
 
