--- a/ventas.html
+++ b/ventas.html
@@ -38,17 +38,19 @@
               
             </thead>
             <tbody>
-              <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#a7aad2;">324</td>
-                  <td scope="row" style="background-color:#a7aad2;">1/08/2024 </td>
-                  <td scope="col" style="background-color:#a7aad2;">Javier Hernández</td>
-                  <td scope="col" style="background-color:#a7aad2;">Sí</td>
-                  <td scope="col" style="background-color:#a7aad2;">$15.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Vendido</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                  <td scope="col" style="background-color:#a7aad2;"><span>Anulado, Vendido, Despachado, Entregado</span></td>
-
-              </tr>
+              <tr>
+                <td scope="row" style="background-color:#a7aad2;">324</td>
+                <td scope="row" style="background-color:#a7aad2;">1/08/2024 </td>
+                <td scope="col" style="background-color:#a7aad2;">Javier Hernández</td>
+                <td scope="col" style="background-color:#a7aad2;">Sí</td>
+                <td scope="col" style="background-color:#a7aad2;">$15.000</td>
+                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Vendido</td>
+                <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#a7aad2;">
+                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                </td>
+            </tr>
+            
               <tr> <!--tr:filas  td:columnas-->
                   <td scope="row" style="background-color:#a7aad2;">233</td>
                   <td scope="row" style="background-color:#a7aad2;">04/05/2023 </td>
@@ -57,6 +59,9 @@
                   <td scope="col" style="background-color:#a7aad2;">$10.000</td>
                   <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">En Bodega</td>
                   <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#a7aad2;">
+                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
                 <td scope="row" style="background-color:#a7aad2;">152</td>
@@ -66,6 +71,9 @@
                 <td scope="col" style="background-color:#a7aad2;">$7.000</td>
                 <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Entregado</td>
                 <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                <td scope="col" style="background-color:#a7aad2;">
+                  <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+              </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
                   <td scope="row" style="background-color:#a7aad2;">255</td>
@@ -75,6 +83,9 @@
                   <td scope="col" style="background-color:#a7aad2;">$38.000</td>
                   <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Anulado</td>
                   <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#a7aad2;">
+                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                </td>
                 </tr>
             </tbody>
           </table>
