--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       <div class="container">
         <div id="product-item" class="row">
           <!-- Tarjeta de producto-->
-          <div id="mini_producto" class="col p-2 col-sm_12 col-md-6 col-lg-4 col-xl-3">
+          <div id="mini_producto" class="p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3">
             <div class="card pt-2 mb-4 box-shadow index_foto_fondo" >
                 <img src="img/producto1.jpg" class="card-img-top index_prod_1" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title letra_blanca">Coño 4</h5>
+                  <h5 class="card-title letra_blanca">League of Legends</h5>
                   <p class="card-text">
                     <span class="index_disponible">
-                      DISPONIBLE EN BODEGA
+                      Disponible en Bodega
                     </span>
                     <br>
                     <span class="index_precio">
@@ -63,12 +63,14 @@
                     </span>
                     <br>
                     <span class="index_subscrito">
-                      Subscrito: $6.000
+                      Suscrito: $6.000
                     </span>
                     <br>
-                    <span class="letra_blanca">
-                      Juego de rol y acción en un mundo 
-                      oscuro donde los jugadores combaten con demonios.
+                    <span class="letra_blanca ">
+                      juego en línea donde dos equipos de cinco jugadores luchan para 
+                      destruir la base enemiga mientras protegen la suya. 
+                      Cada jugador controla un personaje con habilidades únicas. 
+                      Ganar requiere estrategia, coordinación y habilidad individual.
                     </span>
                     <br>
                     <span class="index_stock">
@@ -86,7 +88,7 @@
 
     <div class="container">
       <p style="font-size: 18px;">
-          <a style="color:blue" href="ropa.html">
+          <a style="color:rgb(63, 63, 210)" href="ropa.html">
               <img src="img/super_oferta.png" alt="" >
               <span style="display: inline-block; vertical-align: middle;">
                   ¡¡Por compras superiores a $20.000 en productos <br>
