--- a/miscompras.html
+++ b/miscompras.html
@@ -21,20 +21,20 @@
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#a7aad2;">Nro Boleta</th>
-              <th scope="col" style="background-color:#a7aad2;">Fecha Venta</th> 
-              <th scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Fecha Despacho</th>
-              <th scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Fecha Entrega</th>
-              <th scope="col" style="background-color:#a7aad2;">Monto Total</th>
-              <th scope="col" style="background-color:#a7aad2;">Estado Actual</th>
-              <th scope="col" style="background-color:#a7aad2;">Opciones</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Nro Boleta</th>
+              <th scope="col" style="background-color:#7f82b1">Fecha Venta</th> 
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Fecha Despacho</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Fecha Entrega</th>
+              <th scope="col" style="background-color:#7f82b1">Monto Total</th>
+              <th scope="col" style="background-color:#7f82b1">Estado Actual</th>
+              <th scope="col" style="background-color:#7f82b1">Opciones</th>
             </thead>
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;">2345</td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2345</td>
                 <td scope="col" style="background-color:#a7aad2;">01/01/2023</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">01/01/2023</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">01/01/2023</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">01/01/2023</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">01/01/2023</td>
                 <td scope="col" style="background-color:#a7aad2;">$15.000</td>
                 <td scope="col" style="background-color:#a7aad2;">Entregado</td>
                 <td scope="col" style="background-color:#a7aad2;"><a href="boleta.html" class="btn btn-primary" scope="col" style="background-color:#120077; border-color: #ececec;">Ver Detalles</a>
@@ -45,10 +45,10 @@
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;">6756</td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">6756</td>
                 <td scope="col" style="background-color:#a7aad2;">25/11/2023</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">25/11/2023</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">25/11/2023</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">25/11/2023</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">25/11/2023</td>
                 <td scope="col" style="background-color:#a7aad2;">$300.000</td>
                 <td scope="col" style="background-color:#a7aad2;">Despachado</td>
                 <td scope="col" style="background-color:#a7aad2;"><a href="boleta.html" class="btn btn-primary" scope="col" style="background-color:#120077; border-color: #ffffff;">Ver Detalles</a>
@@ -57,10 +57,10 @@
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;">3453 </td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">3453 </td>
                 <td scope="col" style="background-color:#a7aad2;">18/03/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">18/02/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">18/02/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">18/02/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">18/02/2024</td>
                 <td scope="col" style="background-color:#a7aad2;">$25.000</td>
                 <td scope="col" style="background-color:#a7aad2;">Vendido</td>
                 <td scope="col" style="background-color:#a7aad2;"><a href="boleta.html" class="btn btn-primary" scope="col" style="background-color:#120077; border-color: #ffffff;">Ver Detalles</a>
@@ -70,10 +70,10 @@
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;">5435 </td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">5435 </td>
                 <td scope="col" style="background-color:#a7aad2;">27/03/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">27/03/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">27/03/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">27/03/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">27/03/2024</td>
                 <td scope="col" style="background-color:#a7aad2;">$1.000.000</td>
                 <td scope="col" style="background-color:#a7aad2;">Anulado</td>
                 <td scope="col" style="background-color:#a7aad2;"><a href="boleta.html" class="btn btn-primary" scope="col" style="background-color:#120077; border-color: #ffffff;">Ver Detalles</a>
@@ -83,10 +83,10 @@
 
             <tbody>
               <tr> 
-                <td scope="row" style="background-color:#a7aad2;">9871 </td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">9871 </td>
                 <td scope="col" style="background-color:#a7aad2;">03/04/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">03/04/2024</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">03/04/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">03/04/2024</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">03/04/2024</td>
                 <td scope="col" style="background-color:#a7aad2;">$5.000</td>
                 <td scope="col" style="background-color:#a7aad2;">Entregado</td>
                 <td scope="col" style="background-color:#a7aad2;"><a href="boleta.html" class="btn btn-primary" scope="col" style="background-color:#120077; border-color: #ffffff;">Ver Detalles</a>
