--- a/productos.html
+++ b/productos.html
@@ -74,13 +74,6 @@
                       <input class="form-control registro_color" id="descuento_oferta" placeholder="10%" required>
                       <div class="invalid-feedback ">Debe llenar el campo Descuento por Oferta</div>
                     </div>
-  
-  
-                    <div class="btn-group">
-                        <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
-                        <button type="new" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Nuevo</button>
-                        <button type="delete" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Eliminar</button>
-                    </div>
                   </div>
                   
                   <br><br>
@@ -98,7 +91,13 @@
                             </td>
                         </tr>
                     </table>
-                </div>
+                  </div>
+                  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                  <div class="btn-group" style="width: 20px;">
+                    <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
+                    <button type="new" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Nuevo</button>
+                    <button type="delete" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Eliminar</button>
+                  </div>
                 </div>
               </div>
             </form>
@@ -114,55 +113,55 @@
             <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
               <thead > <!--cabeceras de la tabla-->
                 <!--Titulos de la parte de arriba de la tabla -->
-                <th scope="col" style="background-color:#a7aad2;"></th>
-                <th scope="col" style="background-color:#a7aad2;">ID</th>
-                <th scope="col" style="background-color:#a7aad2;">Categoría</th> 
-                <th scope="col" style="background-color:#a7aad2;">Nombre</th>
-                <th scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Descripción</th>
-                <th scope="col" style="background-color:#a7aad2;">Precio</th>
-                <th scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">%Desc Subscriptor</th>
-                <th scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">%Desc Oferta</th>
+                <th scope="col" style="background-color:#7f82b1;"></th>
+                <th scope="col" style="background-color:#7f82b1;">ID</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">Categoría</th> 
+                <th scope="col" style="background-color:#7f82b1;">Nombre</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">Descripción</th>
+                <th scope="col" style="background-color:#7f82b1;">Precio</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc Subscriptor</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc Oferta</th>
               </thead>
               <tbody>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#a7aad2;"></td>
                     <td scope="row" style="background-color:#a7aad2;">AEFS1243 </td>
-                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
-                    <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
+                    <td scope="col" style="background-color:#a7aad2;"class="d-none d-lg-block d-lg-table-cell">MOBA</td>
+                    <td scope="col" style="background-color:#a7aad2;">League of Legends</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
                     <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">5%</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">5%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2%</td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#a7aad2;"></td>
                     <td scope="row" style="background-color:#a7aad2;">AEFS1243 </td>
                     <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                     <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
                     <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">5%</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">5%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2%</td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                   <td scope="row" style="background-color:#a7aad2;">></td>
                   <td scope="row" style="background-color:#a7aad2;">AEFS1243 </td>
                   <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                   <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
                   <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">5%</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">2%</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">5%</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2%</td>
                 </tr>
                 <tr> <!--tr:filas  td:columnas-->
                     <td scope="row" style="background-color:#a7aad2;"></td>
                     <td scope="row" style="background-color:#a7aad2;">AEFS1243 </td>
                     <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">MOBA</td>
                     <td scope="col" style="background-color:#a7aad2;" >League of Legends</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Juego de disparos</td>
                     <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">5%</td>
-                    <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">2%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">5%</td>
+                    <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2%</td>
                   </tr>
               </tbody>
             </table>
