--- a/administracion.html
+++ b/administracion.html
@@ -34,13 +34,19 @@
               </p>
           </div>
           
-          <div class="col-md-auto text-md-right">
-              <img class="admin_foto" src="img/admin_cafe.webp" alt="">
-          </div>
+          <div class="col-sm-12 col-md-6">
+            <table>
+                <tr>
+                    <td>
+                        <img class="col-md-auto text-md-right" src="img/admin_cafe.webp" alt="" style="max-width: 300px;">
+                    </td>
+                </tr>
+            </table>
+        </div>
       </div>
     </div>
 
-    <br><br><br>
+    <br><br><br><br><br><br>
     <!-- Footer de la tienda -->
     <footer id="footer" >
       <div class="container text-center" >
