--- a/m_cliente.html
+++ b/m_cliente.html
@@ -1,7 +1,7 @@
 <!--Menu de CLIENTE-->
 <body>
     <head id="header" >
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark nav_anonimo">
+        <nav class="navbar navbar-expand-lg navbar-expand-mb navbar-dark bg-dark nav_anonimo">
             <div class="container-fluid">
             <img class="logo_pequeno" src="img/logo1.png" alt="">
             <a class="navbar-brand" href="index.html">Solo Leveling</a>
