--- a/misdatos.html
+++ b/misdatos.html
@@ -79,11 +79,6 @@
                       <input type="password" class="form-control registro_color" id="paswoord2" placeholder="*************" required>
                       <div class="invalid-feedback">Debe repetir la contraseña</div>
                     </div>
-  
-                    <div class="btn-group">
-                        <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
-                        <button type="reset" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Limpiar</button>
-                    </div>
                   </div>
                   
                   <br><br>
@@ -102,12 +97,18 @@
                         </tr>
                     </table>
                 </div>
+                <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                <div class="btn-group" style="width: 20px;">
+                  <button type="update" class="btn boton-pag-registrarse" style="background-color: #a3a5c3;">Guardar</button>
+                  <button type="reset" class="btn boton-pag-registrarse" style="background-color:#7073a3;">Limpiar</button>
                 </div>
+
               </div>
-            </form>
-          </section>
-        </div>
-     </main>
+            </div>
+          </form>
+        </section>
+      </div>
+    </main>
 
     <br><br>
     <!-- Footer de la tienda -->
