--- a/nosotros.html
+++ b/nosotros.html
@@ -17,87 +17,84 @@
   <div id="menu_anonimo"></div>
 
   <br><b></b>
-
+  
   <!-- Contenido principal de la pagina -->
-  <div class="container-fluid">
-    <div class="row text-center justify-content-center align-items-center">
-      <div class="col-sm-12 col-md-5 col-lg-4 col-xl-2 " style=" background-color:#7579a4;">
-        <img height="300px" src="img/logo1.png" alt="">
-        <p class="letra_blanca">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Molestias non reprehenderit vitae, repellendus adipisci
-          neque expedita vel aut voluptates aspernatur voluptatibus
-          fugit enim ex voluptas magni eligendi quidem in repudiandae.
-        </p>
-      </div>
-
-      <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: rem;">
-          <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
+  <div class="container">
+    <div class="row" >
+      <!-- Tienda -->
+      <div class="card p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
+        <div class="card borde_nosotros" >
+          <img src="img/logo1.png" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
+          <br>
           <div class="card-body">
-            <h5 class="card-title">
-              Gerente General
-            </h5>
+            <h2 class="card-title text-center" style="color: #9c9fcd;">Solo Leveling</h2>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Molestias non reprehenderit vitae, repellendus adipisci
-              neque expedita vel aut voluptates aspernatur voluptatibus
-              fugit enim ex voluptas magni eligendi quidem in repudiandae.
+              Es el lugar ideal para los amantes de los videojuegos, con una amplia 
+              selección de títulos emocionantes y mercancía relacionada. Ofrece una 
+              experiencia inmersiva para jugadores de todas las edades. También cuenta 
+              con una variedad de productos coleccionables y temáticos para llevar a casa.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
-
-      <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: rem;">
-          <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
+      <!-- Gerente general-->
+      <div class="card p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
+        <div class="card borde_nosotros" >
+          <img src="img/perfil_usuario.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
+          <br>
           <div class="card-body">
-            <h5 class="card-title">
-              Gerente General
-            </h5>
+            <h2 class="card-title text-center" style="color: #9c9fcd;">Gerente general</h2>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Molestias non reprehenderit vitae, repellendus adipisci
-              neque expedita vel aut voluptates aspernatur voluptatibus
-              fugit enim ex voluptas magni eligendi quidem in repudiandae.
+              Impulsa nuestra tienda, fusionando la pasión por los videojuegos con un servicio excepcional. 
+              Su liderazgo crea el destino perfecto para los aficionados, ofreciendo una amplia selección de 
+              títulos emocionantes y una experiencia inmersiva para todas las edades. 
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <br>
+            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
-
-     
-
-      <div class="col-sm-12 col-md-7 col-lg-4 col-xl-2" style=" background-color:#5d6087">
-        <div class="card" style="width: rem;">
-          <img src="img/perfil_usuario.webp" class="card-img-top" alt="...">
+      <!-- Director de Ventas -->
+      <div class="card p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
+        <div class="card borde_nosotros" >
+          <img src="img/perfil_usuario2.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
+          <br>
           <div class="card-body">
-            <h5 class="card-title">
-              Gerente General
-            </h5>
+            <h2 class="card-title text-center" style="color: #9c9fcd;">Director de Ventas</h2>
             <p class="card-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Molestias non reprehenderit vitae, repellendus adipisci
-              neque expedita vel aut voluptates aspernatur voluptatibus
-              fugit enim ex voluptas magni eligendi quidem in repudiandae.
+              Impulsa las ventas y la satisfacción del cliente, liderando un equipo dedicado. 
+              Su enfoque estratégico garantiza una experiencia de compra excepcional con una 
+              amplia variedad de productos emocionantes. Su liderazgo inspirador asegura que 
+              cada visita a nuestra tienda sea única y satisfactoria.
             </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <br><br>
+            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
           </div>
         </div>
       </div>
-
-      
-
+      <!-- Encargado de Atención al Cliente -->
+      <div class="col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
+        <div class="card borde_nosotros" >
+          <img src="img/perfil_usuario3.webp" class="card-img-top img-fluid" style="max-width: 100%; height: auto;" alt="...">
+          <div class="card-body">
+            <h3 class="card-title text-center" style="color: #9c9fcd;">Encargado de Atención al Cliente </h3>
+            <p class="card-text">
+              Lidera un equipo enfocado en brindar un servicio excepcional. Su enfoque centrado en el cliente 
+              garantiza una experiencia satisfactoria en cada interacción. Con empatía y profesionalismo, 
+              asegura que cada cliente se sienta valorado, haciendo que cada visita a nuestra 
+              tienda sea memorable.
+            </p>
+            <button class="btn btn-primary btn-block boton_correo" onclick="window.location.href='mailto:ejemplo@example.com'" style="background-color: #5d6087;">Enviar correo</button>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 
-    <br><br><br><br><br><br>
-
-
-
-
-    <!-- Footer de la tienda -->
-    <footer id="footer">
+  <br><br><br><br>
+  <!-- Footer de la tienda -->
+  <footer id="footer">
       <div class="container text-center">
         <p>
           <a class="color_footer" href="#">Volver arriba</a>
@@ -141,10 +138,10 @@
           Dirección: La Moneda 123, Santiago
         </p>
       </div>
-    </footer>
+  </footer>
 
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
 </body>
