--- a/ventas.html
+++ b/ventas.html
@@ -16,10 +16,8 @@
 <body>
     <!-- Cabecera con menú administrador -->
     <div id="menu_admin"></div>
-
     <!-- Contenido de la pagina -->
     <h1 style="margin: 25px;">Historial de Ventas</h1>
-
     <Section>
       <div class="container pt-2" >
         <section class="text-center" >
@@ -27,66 +25,84 @@
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#a7aad2;">Nro boleta</th>
-              <th scope="col" style="background-color:#a7aad2;">Fecha</th> 
-              <th scope="col" style="background-color:#a7aad2;">Nombre cliente</th>
-              <th scope="col" style="background-color:#a7aad2;">Subscrito</th>
-              <th scope="col" style="background-color:#a7aad2;">Monto total</th>
-              <th scope="col" style="background-color:#a7aad2;">Estado actual</th>
-              <th scope="col" style="background-color:#a7aad2;">Detalle</th>
-              <th scope="col" style="background-color:#a7aad2;">Cambiar estado</th>
-              
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Nro boleta</th>
+              <th scope="col" style="background-color:#7f82b1">Fecha</th> 
+              <th scope="col" style="background-color:#7f82b1">Nombre cliente</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Subscrito</th>
+              <th scope="col" style="background-color:#7f82b1">Monto total</th>
+              <th scope="col" style="background-color:#7f82b1">Estado actual</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Detalle</th>
+              <th scope="col" style="background-color:#7f82b1">Cambiar estado</th>
             </thead>
             <tbody>
               <tr>
-                <td scope="row" style="background-color:#a7aad2;">324</td>
-                <td scope="row" style="background-color:#a7aad2;">1/08/2024 </td>
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">324</td>
+                <td scope="row" style="background-color:#a7aad2;">01 /08/ 2024 </td>
                 <td scope="col" style="background-color:#a7aad2;">Javier Hernández</td>
-                <td scope="col" style="background-color:#a7aad2;">Sí</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#a7aad2;">$15.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Vendido</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Vendido</td>
                 <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
                 <td scope="col" style="background-color:#a7aad2;">
-                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
-                </td>
-            </tr>
-            
-              <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#a7aad2;">233</td>
-                  <td scope="row" style="background-color:#a7aad2;">04/05/2023 </td>
-                  <td scope="col" style="background-color:#a7aad2;">Ana García</td>
-                  <td scope="col" style="background-color:#a7aad2;">No</td>
-                  <td scope="col" style="background-color:#a7aad2;">$10.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">En Bodega</td>
-                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
-                  <td scope="col" style="background-color:#a7aad2;">
-                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                  <div class="botones-container">
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
+                  </div>
                 </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                <td scope="row" style="background-color:#a7aad2;">152</td>
-                <td scope="row" style="background-color:#a7aad2;">24/01/2024 </td>
+                  <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">233</td>
+                  <td scope="row" style="background-color:#a7aad2;">04 /05/ 2023 </td>
+                  <td scope="col" style="background-color:#a7aad2;">Ana García</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">No</td>
+                  <td scope="col" style="background-color:#a7aad2;">$10.000</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">En Bodega</td>
+                  <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
+                  <td scope="col" style="background-color:#a7aad2;">
+                    <div class="botones-container">
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
+                    </div>
+                  </td>
+              </tr>
+              <tr> <!--tr:filas  td:columnas-->
+                <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">152</td>
+                <td scope="row" style="background-color:#a7aad2;">24 /01/ 2024 </td>
                 <td scope="col" style="background-color:#a7aad2;">Ricardo Flores</td>
-                <td scope="col" style="background-color:#a7aad2;">Sí</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                 <td scope="col" style="background-color:#a7aad2;">$7.000</td>
-                <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Entregado</td>
+                <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Entregado</td>
                 <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
                 <td scope="col" style="background-color:#a7aad2;">
-                  <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                  <div class="botones-container">
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
+                    <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
+                  </div>
               </td>
               </tr>
               <tr> <!--tr:filas  td:columnas-->
-                  <td scope="row" style="background-color:#a7aad2;">255</td>
-                  <td scope="row" style="background-color:#a7aad2;">17/12/2023</td>
+                  <td scope="row" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">255</td>
+                  <td scope="row" style="background-color:#a7aad2;">17 /12/ 2023</td>
                   <td scope="col" style="background-color:#a7aad2;">María López</td>
-                  <td scope="col" style="background-color:#a7aad2;" >Sí</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Sí</td>
                   <td scope="col" style="background-color:#a7aad2;">$38.000</td>
-                  <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Anulado</td>
+                  <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Anulado</td>
                   <td scope="col" class="ver-detalle" style="background-color:#a7aad2;" onclick="verDetalle()">Ver Detalle</td>
                   <td scope="col" style="background-color:#a7aad2;">
-                    <span style="text-decoration: underline; color: blue;">Anulado  Vendido  Despachado  Entregado</span>
+                    <div class="botones-container">
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Anulado</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Vendido</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Despachado</button>
+                      <button type="delete" href="#" class="btn btn-primary boton_eliminar btn-sm boton_buscar_anonimo_2">Entregado</button>
+                    </div>
                 </td>
-                </tr>
+              </tr>
             </tbody>
           </table>
         </section>
