Feedback del Profe
Se hacen las modificaciones solicitadas por el profe

--- a/bodega.html
+++ b/bodega.html
@@ -14,13 +14,14 @@
     <!-- Contenido de la pagina -->
       <div class="container">
         <h1 style="margin: 25px;">Mantenedor de Bodega</h1>
+        <br>
         <div class="col-sm-12 col-md-6">
         <section>
           <form>
             <div class="row">
               <div class="col-sm-12 col-md-6">
                 <div class="mb-3 fw-bold">
-                  <label for="id" class="form-label letra_blanca">Categoria</label>
+                  <label for="id" class="form-label letra_blanca">Categoría</label>
                   <select class="form-select registro_color" id="categoria">
                     <option value="1">Ninguno</option>
                     <option value="2">MOBA</option>
@@ -56,7 +57,8 @@
                     <tr>
                         <td>
                             <img id="user-image-preview" src="img/producto1.jpg" alt="" class="user-image" style="max-width: 300px; margin-right: 220px">
-                        </td>
+                            <br><br>
+                          </td>
                     </tr>
                     <tr>
                         <td>
