--- a/carrito.html
+++ b/carrito.html
@@ -15,7 +15,7 @@
   <main role="main" >
     <div class="container pt-2" >
       <section class="text-center" >
-        <h1>Carrito de compras</h1>
+        <h1 class="legtra_blanca">Carrito de compras</h1>
         <br >
         <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
           <thead > <!--cabeceras de la tabla-->
@@ -105,8 +105,8 @@
   </main>
   <div class="d-flex justify-content-end" style="margin-right: 90px;">
     <div class="btn-group">
-        <button class="btn btn-danger" type="reset">Cancelar compra</button>
-        <button class="btn btn-success" type="submit">Comprar</button>
+      <button class="btn" style="background-color: #a3a5c3;"type="reset">Cancelar compra</button>
+      <button class="btn" style="background-color:#7073a3;" type="submit">Comprar</button>
     </div>
   </div>
   <br><br><br><br><br><br><br><br><br><br><br><br>
