--- a/miscompras.html
+++ b/miscompras.html
@@ -11,17 +11,17 @@
 <body>
     <!-- Cabecera con menú cliente -->
     <div id="menu_cliente"></div>
-
+    <br>
     <!-- Contenido de la pagina -->
     <main role="main" >
       <div class="container pt-2" >
         <section class="text-center" >
-          <h1>Mis Compras anteriores</h1>
+          <h1 class="letra_blanca">Mis Compras anteriores</h1>
           <br >
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Nro Boleta</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Nro. Boleta</th>
               <th scope="col" style="background-color:#7f82b1">Fecha Venta</th> 
               <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Fecha Despacho</th>
               <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Fecha Entrega</th>
@@ -102,7 +102,7 @@
       </div>
     </main>
     
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     <!-- Footer de la tienda -->
     <footer id="footer" >
       <div class="container text-center" >
