--- a/nosotros.html
+++ b/nosotros.html
@@ -17,9 +17,9 @@
   <div id="menu_anonimo"></div>
 
   <br><b></b>
-  
   <!-- Contenido principal de la pagina -->
   <div class="container">
+    <h1 class="text-center letra_blanca">Nosotros</h1>
     <div class="row" >
       <!-- Tienda -->
       <div class="card p-2 col-sm-12 col-md-6 col-lg-4 col-xl-3 borde_nosotros" style="border: 1px solid black;">
