--- a/productos.html
+++ b/productos.html
@@ -83,6 +83,7 @@
                         <tr>
                             <td>
                                 <img id="user-image-preview" src="img/producto1.jpg" alt="" class="user-image" style="width: 400px;">
+                                <br><br>
                             </td>
                         </tr>
                         <tr>
@@ -119,8 +120,8 @@
                 <th scope="col" style="background-color:#7f82b1;">Nombre</th>
                 <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">Descripción</th>
                 <th scope="col" style="background-color:#7f82b1;">Precio</th>
-                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc Subscriptor</th>
-                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc Oferta</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Subscriptor</th>
+                <th scope="col" style="background-color:#7f82b1;" class="d-none d-lg-block d-lg-table-cell">%Desc. Oferta</th>
               </thead>
               <tbody>
                 <tr> <!--tr:filas  td:columnas-->
