--- a/registro.html
+++ b/registro.html
@@ -88,6 +88,7 @@
                         <tr>
                             <td>
                                 <img id="user-image-preview" src="img/perfil_usuario.webp" alt="" class="user-image" style="max-width: 300px;">
+                                <br><br>
                             </td>
                         </tr>
                         <tr>
@@ -96,6 +97,12 @@
                             </td>
                         </tr>
                     </table>
+                    &nbsp;
+                    <h1>
+                      <p style="font-size: 15px;" >
+                        <a class="color_footer" style="color:rgb(29, 30, 64)" href="ingresar.html">¿Ya tienes una cuenta?</a>
+                      </p>
+                    </h1>
                 </div>
                 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                 <div class="btn-group" style="width: 20px;">
