--- a/usuarios.html
+++ b/usuarios.html
@@ -18,7 +18,7 @@
       }
     </style>
 
-<br><br> <br> 
+    <br><br>
     <!-- Contenido de la pagina -->
     <Section>
       <div class="container" >
@@ -101,7 +101,7 @@
           <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
           <label class="form-check-label letra_blanca" for="defaultCheck1">
             Me gustaría suscribirme a la Tienda 'Solo Leveling' con una contribución mensual de $3.000. 
-            Además, me complacería recibir un descuento del 5% en todas mis compras como parte de esta suscripción
+            Además, me complacería recibir un descuento del 5% en todas mis compras como parte de esta subscripción
           </label>
 
         </div>
@@ -123,6 +123,7 @@
                     <tr>
                         <td>
                             <img id="user-image-preview" src="img/user.png" alt="" class="user-image" style="width: 400px;">
+                            <br><br>
                         </td>
                     </tr>
                     <tr>
@@ -155,39 +156,39 @@
         <table class="table table-bordered table-hover table-border" style="background-color:#a7aad2; border-color: #9497c1;">
           <thead>
             <tr>
-              <th scope="col" style="background-color:#7f82b1" class="text-end d-none d-lg-block d-lg-table-cell">ID</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">ID</th>
               <th scope="col" style="background-color:#7f82b1">Tipo de Usuario</th>
               <th scope="col" style="background-color:#7f82b1">RUT</th>
               <th scope="col" style="background-color:#7f82b1">Nombre</th>
               <th scope="col" style="background-color:#7f82b1">Apellidos</th>
-              <th scope="col" style="background-color:#7f82b1" class="text-end d-none d-lg-block d-lg-table-cell">Correo</th>
-              <th scope="col" style="background-color:#7f82b1" class="text-end d-none d-lg-block d-lg-table-cell">Dirección</th>
-              <th scope="col" style="background-color:#7f82b1">Con Suscripción</th>
-              <th scope="col" style="background-color:#7f82b1" class="text-end d-none d-lg-block d-lg-table-cell">Foto</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Correo</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Dirección</th>
+              <th scope="col" style="background-color:#7f82b1">Con Subscripción</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Foto</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">1</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">1</td>
               <td scope="col" style="background-color:#a7aad2;">Cliente</td>
               <td scope="col" style="background-color:#a7aad2;">12345678-0</td>
               <td scope="col" style="background-color:#a7aad2;">Juan</td>
               <td scope="col" style="background-color:#a7aad2;">Pérez</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">juanperez@example.com</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Calle Falsa 123</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">juanperez@example.com</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Calle Falsa 123</td>
               <td scope="col" style="background-color:#a7aad2;">Sí</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell"><img src="img/foto_usuario.jpg" alt="Foto" style="width: 50px;"></td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"><img src="img/foto_usuario.jpg" alt="Foto" style="width: 50px;"></td>
             </tr>
             <tr>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">2</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">2</td>
               <td scope="col" style="background-color:#a7aad2;">Usuario</td>
               <td scope="col" style="background-color:#a7aad2;">98765432-K</td>
               <td scope="col" style="background-color:#a7aad2;">María</td>
               <td scope="col" style="background-color:#a7aad2;">López</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">marialopez@example.com</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell">Avenida Principal 456</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">marialopez@example.com</td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell">Avenida Principal 456</td>
               <td scope="col" style="background-color:#a7aad2;">No</td>
-              <td scope="col" style="background-color:#a7aad2;" class="text-end d-none d-lg-block d-lg-table-cell"><img src="img/perfil_usuario.webp" alt="Foto" style="width: 50px;"></td>
+              <td scope="col" style="background-color:#a7aad2;" class="d-none d-lg-block d-lg-table-cell"><img src="img/perfil_usuario.webp" alt="Foto" style="width: 50px;"></td>
             </tr> 
             <!-- Pueden agregar más filas con datos aleatorios según sea necesario -->
           </tbody>
