--- a/ventas.html
+++ b/ventas.html
@@ -17,11 +17,11 @@
     <!-- Cabecera con menú administrador -->
     <div id="menu_admin"></div>
     <!-- Contenido de la pagina -->
-    <h1 style="margin: 25px;">Historial de Ventas</h1>
     <Section>
       <div class="container pt-2" >
         <section class="text-center" >
-          <br><br>
+          <h1 class="letra_blanca" style="margin: 25px;">Historial de Ventas</h1>
+          <br>
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
@@ -109,14 +109,9 @@
       </div>
   </Section>
 
-
-
-
-
-
-    <br><br>
-    <!-- Footer de la tienda -->
-    <footer id="footer" >
+  <br><br><br><br><br><br><br><br><br><br><br>
+  <!-- Footer de la tienda -->
+  <footer id="footer" >
         <div class="container text-center" >
           <p>
             <a class="color_footer" href="#">Volver arriba</a>
@@ -150,9 +145,9 @@
             Dirección: La Moneda 123, Santiago
          </p>
         </div>
-    </footer>
+  </footer>
 
-    <script src="js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
