--- a/boleta.html
+++ b/boleta.html
@@ -11,27 +11,39 @@
 <body>
     <!-- Cabecera con menú administrador -->
     <div id="menu_admin"></div>
-    <br>
     <!-- Contenido de la pagina -->
-    <h1 style="margin: 25px 25px 40; margin-left: 10px;">Detalle de Boleta 2345</h1>
-    <div class=" row col-sm-12 col-md-6">
-        <img id="user-image-preview" src="img/envio.png" alt="" class="user-image img-fluid mt-4 ml-md-4" style="width: 500px; position: absolute; top: 70px; right: 10px;">
-    </div>
-  
-    <br><br>
     <main role="main" >
       <div class="container pt-2" >
-        <section class="text-center" >
-          <br > <br > <br >
+        <section class="" >
+          <div class="container d-flex justify-content-between align-items-center">
+            <h1>Detalle de Boleta 2345</h1>
+            <div class="d-flex">
+              <div class="user-image img-fluid mt-4 ml-md-4" style="width:100px;">
+                <img src="img/vendido.png" class="card-img-top" alt="...">
+                <p class="text-center" style="color:rgb(131, 226, 150)">Vendido <br> 17/04/2024 <br>14:36</p>
+              </div>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <div class="user-image img-fluid mt-4 ml-md-4" style="width: 100px;">
+                <img src="img/despachado.png" class="card-img-top" alt="...">
+                <p class="text-center" style="color:rgb(213, 226, 131)">Despachado <br> 19/04/2024 <br>09:12</p>
+              </div>
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <div class="user-image img-fluid mt-4 ml-md-4" style="width: 100px;">
+                <img src="img/entregado.png" class="card-img-top" alt="...">
+                <p class="text-center" style="color:rgb(226, 139, 131)">Entregado</p>
+              </div>
+            </div>
+          </div>
+          <br>
           <table class="table table-bordered table-hover table-border"  style="background-color:#a7aad2; border-color: #9497c1;">
             <thead > <!--cabeceras de la tabla-->
               <!--Titulos de la parte de arriba de la tabla -->
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Categoria</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">Categoría</th>
               <th scope="col" style="background-color:#7f82b1">Producto</th> 
               <th scope="col" style="background-color:#7f82b1">Precio</th> 
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Suscriptor</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Subscriptor</th>
               <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Oferta</th>
-              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Desc total</th>
+              <th scope="col" style="background-color:#7f82b1" class="d-none d-lg-block d-lg-table-cell">%Desc. total</th>
               <th scope="col" style="background-color:#7f82b1">Descuentos</th>
               <th scope="col" style="background-color:#7f82b1">Precio a pagar</th>
             </thead>
@@ -105,7 +117,7 @@
       </div>
     </main>
 
-    <br><br>
+    
     <div style="display: flex; justify-content: flex-end; margin-right: 100px;">
       <table>
         <tr>
