--- a/ingresar.html
+++ b/ingresar.html
@@ -31,6 +31,14 @@
             <div class="mb-3 row ">
                 <button type="button" class="btn btn-primary boton_ingresar">Ingresar</button>
             </div>
+            <br>
+            <h1>
+              <p style="font-size: 15px;" >
+                <a class="color_footer" style="color:rgb(29, 30, 64)" href="registro.html">Registrarse</a>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                <a class="color_footer" style="color:rgb(29, 30, 64)" href="#">Olvidé mi contraseña</a>
+              </p>
+            </h1>
         </div>
         <br><br>
       <div class="container text-center">
@@ -44,7 +52,7 @@
         </p>
       </div>
         
-    <br><br><br><br><br><br><br><br>
+    <br><br><br><br><br>
     <!-- Footer de la tienda -->
     <footer id="footer" >
       <div class="container text-center" >
